[gd_scene load_steps=4 format=2]

[ext_resource path="res://Dialog.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="Dialog" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Ghost" type="Sprite" parent="."]
modulate = Color( 0.811765, 0.223529, 0.109804, 0.462745 )
position = Vector2( 20.8, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="PopupPanel" type="PopupPanel" parent="."]
pause_mode = 2
margin_left = -330.0
margin_top = -40.0
margin_right = -90.0
margin_bottom = 160.0

[node name="Contents" type="VBoxContainer" parent="PopupPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 194.0

[node name="Title" type="Label" parent="PopupPanel/Contents"]
margin_right = 232.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.368627, 0.8, 0.101961, 1 )
custom_colors/font_outline_modulate = Color( 0.741176, 0.113725, 0.113725, 1 )
custom_colors/font_color_shadow = Color( 0.678431, 0.184314, 0.184314, 1 )
text = "Madrid Cpp Ghost"
align = 1

[node name="Input" type="LineEdit" parent="PopupPanel/Contents"]
margin_top = 18.0
margin_right = 232.0
margin_bottom = 42.0

[node name="SendButton" type="Button" parent="PopupPanel/Contents"]
margin_top = 46.0
margin_right = 232.0
margin_bottom = 66.0
text = "Send"

[node name="GhostMsg" type="TextEdit" parent="PopupPanel/Contents"]
margin_top = 70.0
margin_right = 232.0
margin_bottom = 190.0
rect_min_size = Vector2( 232, 120 )
readonly = true
context_menu_enabled = false
wrap_enabled = true
[connection signal="body_entered" from="." to="." method="_on_Dialog_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Dialog_body_exited"]
[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
[connection signal="pressed" from="PopupPanel/Contents/SendButton" to="." method="_on_SendButton_pressed"]
